--- a/style.css
+++ b/style.css
@@ -145,3 +145,25 @@
         .form-regis{
             box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
         }
+
+        .caption-title{
+            font-size: 70pt !important;
+        }
+
+        @media all and (max-width: 1386px){
+            .caption-title{
+                font-size: 50pt !important;
+            }
+        }
+
+        @media all and (max-width: 1024px){
+            .caption-title{
+                font-size: 40pt !important;
+            }
+        }
+
+        @media all and (max-width: 768px){
+            .caption-title{
+                font-size: 20pt !important;
+            }
+        }
