--- a/Lorenztino/public/css/style.css
+++ b/Lorenztino/public/css/style.css
@@ -127,8 +127,8 @@
         }
 
         .img-event {
-            background-image: url("../wedding/couple3.jpg");
-            background-size: 100% 100%;
+            background-image: url("../wedding/couple2.jpg");
+            background-size: cover;
             height: 400px;
             background-repeat: no-repeat;
         }
