--- a/Lorenztino/public/css/style.css
+++ b/Lorenztino/public/css/style.css
@@ -127,7 +127,7 @@
         }
 
         .img-event {
-            background-size: contain;
+            background-size: cover;
             height: 1000px;
             background-repeat: no-repeat;
         }
