--- a/Lorenztino/public/css/style.css
+++ b/Lorenztino/public/css/style.css
@@ -133,7 +133,7 @@
         }
 
         .foto1{
-            background-image: url("../wedding/mmzb.JPG");
+            background-image: url("/wedding/mmzb.JPG");
         }
 
         #loc,
