--- a/Lorenztino/public/newStyle/fonts/flaticon/font/_flaticon.scss
+++ b/Lorenztino/public/newStyle/fonts/flaticon/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 30/08/2019 12:57
+    Creation date: 10/11/2019 13:47
     */
 
     @font-face {
@@ -37,14 +37,12 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-rose-variant-outline-with-vines:before { content: "\f100"; }
-.flaticon-rose-outline-variant-with-vines-and-leaves:before { content: "\f101"; }
-.flaticon-reception-bell:before { content: "\f102"; }
-.flaticon-wedding-kiss:before { content: "\f103"; }
-.flaticon-cake:before { content: "\f104"; }
+    .flaticon-church:before { content: "\f100"; }
+.flaticon-wedding-kiss:before { content: "\f101"; }
+.flaticon-rose-outline-variant-with-vines-and-leaves:before { content: "\f102"; }
+.flaticon-rose-variant-outline-with-vines:before { content: "\f103"; }
     
-    $font-Flaticon-rose-variant-outline-with-vines: "\f100";
-    $font-Flaticon-rose-outline-variant-with-vines-and-leaves: "\f101";
-    $font-Flaticon-reception-bell: "\f102";
-    $font-Flaticon-wedding-kiss: "\f103";
-    $font-Flaticon-cake: "\f104";
+    $font-Flaticon-church: "\f100";
+    $font-Flaticon-wedding-kiss: "\f101";
+    $font-Flaticon-rose-outline-variant-with-vines-and-leaves: "\f102";
+    $font-Flaticon-rose-variant-outline-with-vines: "\f103";
