--- a/Lorenztino/public/newStyle/fonts/flaticon/font/flaticon.css
+++ b/Lorenztino/public/newStyle/fonts/flaticon/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 30/08/2019 12:57
+  	Creation date: 10/11/2019 13:47
   	*/
 
 @font-face {
@@ -30,8 +30,7 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-rose-variant-outline-with-vines:before { content: "\f100"; }
-.flaticon-rose-outline-variant-with-vines-and-leaves:before { content: "\f101"; }
-.flaticon-reception-bell:before { content: "\f102"; }
-.flaticon-wedding-kiss:before { content: "\f103"; }
-.flaticon-cake:before { content: "\f104"; }
+.flaticon-church:before { content: "\f100"; }
+.flaticon-wedding-kiss:before { content: "\f101"; }
+.flaticon-rose-outline-variant-with-vines-and-leaves:before { content: "\f102"; }
+.flaticon-rose-variant-outline-with-vines:before { content: "\f103"; }
